# langChain-agent

./: .env  .gitignore  langgraph.json  pyproject.toml  readme.txt
src/agent/: agents.py  llms.py
src/agent/tools/: tool_demo.py  tool_email.py  tool_web.py
src/demo/: 01-调用-模型调用.py  02-输出-流式输出.py  02-输出-结构化输出（默认）.py  02-输出解析器-JsonOutputParser.py
